--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@uiw/react-md-editor": "^4.0.7",
     "clsx": "^2.1.1",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
