--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@uiw/react-md-editor": "^4.0.7",
     "clsx": "^2.1.1",
+    "fs-extra": "^11.3.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
